fixed dict errors

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY="AIzaSyDu-tWaRDVFKHFEpZyjHk4fQVczlVHoDbE"
+DEEPSEEK_API_KEY="sk-49326ab74d5449869f52c4c3df902271"
+DEEPSEEK_API_BASE="https://api.deepseek.com"
